// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui MovieData check with other cases in conditional rendering in the container 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MovieData
    movieData={
      Object {
        "runtime": 195,
        "vote_average": 0,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="movieDataHeader"
        >
          <label
            className="netflixTextMovie"
          >
            netflixroulette
          </label>
          <button
            className="searchButton"
            onClick={[Function]}
          >
            SEARCH
          </button>
        </div>,
        <div
          className="movieBody"
        >
          <div
            className="movieImage"
          >
            <img
              style={
                Object {
                  "borderRadius": "8px",
                  "width": "300px",
                }
              }
            />
          </div>
          <div
            className="movieDesc"
          >
            <table>
              <tbody>
                <tr>
                  <td>
                    <p
                      className="movieName"
                    />
                    <p
                      className="tagline"
                    />
                  </td>
                  <td>
                    
                  </td>
                </tr>
                <tr>
                  <td>
                    <div>
                      <span
                        className="white"
                      />
                      <span
                        className="white"
                      >
                        195min
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
            <span
              className="overview"
            />
          </div>
          <div
            className="clear"
          />
        </div>,
      ],
      "className": "movieContainer",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label
              className="netflixTextMovie"
            >
              netflixroulette
            </label>,
            <button
              className="searchButton"
              onClick={[Function]}
            >
              SEARCH
            </button>,
          ],
          "className": "movieDataHeader",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "netflixroulette",
              "className": "netflixTextMovie",
            },
            "ref": null,
            "rendered": "netflixroulette",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "SEARCH",
              "className": "searchButton",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "SEARCH",
            "type": "button",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="movieImage"
            >
              <img
                style={
                  Object {
                    "borderRadius": "8px",
                    "width": "300px",
                  }
                }
              />
            </div>,
            <div
              className="movieDesc"
            >
              <table>
                <tbody>
                  <tr>
                    <td>
                      <p
                        className="movieName"
                      />
                      <p
                        className="tagline"
                      />
                    </td>
                    <td>
                      
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div>
                        <span
                          className="white"
                        />
                        <span
                          className="white"
                        >
                          195min
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
              <span
                className="overview"
              />
            </div>,
            <div
              className="clear"
            />,
          ],
          "className": "movieBody",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img
                style={
                  Object {
                    "borderRadius": "8px",
                    "width": "300px",
                  }
                }
              />,
              "className": "movieImage",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "src": undefined,
                "style": Object {
                  "borderRadius": "8px",
                  "width": "300px",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <table>
                  <tbody>
                    <tr>
                      <td>
                        <p
                          className="movieName"
                        />
                        <p
                          className="tagline"
                        />
                      </td>
                      <td>
                        
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div>
                          <span
                            className="white"
                          />
                          <span
                            className="white"
                          >
                            195min
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>,
                <span
                  className="overview"
                />,
              ],
              "className": "movieDesc",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <tbody>
                    <tr>
                      <td>
                        <p
                          className="movieName"
                        />
                        <p
                          className="tagline"
                        />
                      </td>
                      <td>
                        
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div>
                          <span
                            className="white"
                          />
                          <span
                            className="white"
                          >
                            195min
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <tr>
                        <td>
                          <p
                            className="movieName"
                          />
                          <p
                            className="tagline"
                          />
                        </td>
                        <td>
                          
                        </td>
                      </tr>,
                      <tr>
                        <td>
                          <div>
                            <span
                              className="white"
                            />
                            <span
                              className="white"
                            >
                              195min
                            </span>
                          </div>
                        </td>
                      </tr>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <td>
                            <p
                              className="movieName"
                            />
                            <p
                              className="tagline"
                            />
                          </td>,
                          <td>
                            
                          </td>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <p
                                className="movieName"
                              />,
                              <p
                                className="tagline"
                              />,
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": undefined,
                                "className": "movieName",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "p",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": undefined,
                                "className": "tagline",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "p",
                            },
                          ],
                          "type": "td",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "",
                          },
                          "ref": null,
                          "rendered": "",
                          "type": "td",
                        },
                      ],
                      "type": "tr",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <td>
                          <div>
                            <span
                              className="white"
                            />
                            <span
                              className="white"
                            >
                              195min
                            </span>
                          </div>
                        </td>,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <div>
                            <span
                              className="white"
                            />
                            <span
                              className="white"
                            >
                              195min
                            </span>
                          </div>,
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <span
                                className="white"
                              />,
                              <span
                                className="white"
                              >
                                195min
                              </span>,
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": undefined,
                                "className": "white",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "span",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "195min",
                                "className": "white",
                              },
                              "ref": null,
                              "rendered": "195min",
                              "type": "span",
                            },
                          ],
                          "type": "div",
                        },
                        "type": "td",
                      },
                      "type": "tr",
                    },
                  ],
                  "type": "tbody",
                },
                "type": "table",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "overview",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "clear",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="movieDataHeader"
          >
            <label
              className="netflixTextMovie"
            >
              netflixroulette
            </label>
            <button
              className="searchButton"
              onClick={[Function]}
            >
              SEARCH
            </button>
          </div>,
          <div
            className="movieBody"
          >
            <div
              className="movieImage"
            >
              <img
                style={
                  Object {
                    "borderRadius": "8px",
                    "width": "300px",
                  }
                }
              />
            </div>
            <div
              className="movieDesc"
            >
              <table>
                <tbody>
                  <tr>
                    <td>
                      <p
                        className="movieName"
                      />
                      <p
                        className="tagline"
                      />
                    </td>
                    <td>
                      
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div>
                        <span
                          className="white"
                        />
                        <span
                          className="white"
                        >
                          195min
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
              <span
                className="overview"
              />
            </div>
            <div
              className="clear"
            />
          </div>,
        ],
        "className": "movieContainer",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <label
                className="netflixTextMovie"
              >
                netflixroulette
              </label>,
              <button
                className="searchButton"
                onClick={[Function]}
              >
                SEARCH
              </button>,
            ],
            "className": "movieDataHeader",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "netflixroulette",
                "className": "netflixTextMovie",
              },
              "ref": null,
              "rendered": "netflixroulette",
              "type": "label",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "SEARCH",
                "className": "searchButton",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "SEARCH",
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="movieImage"
              >
                <img
                  style={
                    Object {
                      "borderRadius": "8px",
                      "width": "300px",
                    }
                  }
                />
              </div>,
              <div
                className="movieDesc"
              >
                <table>
                  <tbody>
                    <tr>
                      <td>
                        <p
                          className="movieName"
                        />
                        <p
                          className="tagline"
                        />
                      </td>
                      <td>
                        
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div>
                          <span
                            className="white"
                          />
                          <span
                            className="white"
                          >
                            195min
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
                <span
                  className="overview"
                />
              </div>,
              <div
                className="clear"
              />,
            ],
            "className": "movieBody",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <img
                  style={
                    Object {
                      "borderRadius": "8px",
                      "width": "300px",
                    }
                  }
                />,
                "className": "movieImage",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "src": undefined,
                  "style": Object {
                    "borderRadius": "8px",
                    "width": "300px",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          <p
                            className="movieName"
                          />
                          <p
                            className="tagline"
                          />
                        </td>
                        <td>
                          
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div>
                            <span
                              className="white"
                            />
                            <span
                              className="white"
                            >
                              195min
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>,
                  <span
                    className="overview"
                  />,
                ],
                "className": "movieDesc",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <tbody>
                      <tr>
                        <td>
                          <p
                            className="movieName"
                          />
                          <p
                            className="tagline"
                          />
                        </td>
                        <td>
                          
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div>
                            <span
                              className="white"
                            />
                            <span
                              className="white"
                            >
                              195min
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <tr>
                          <td>
                            <p
                              className="movieName"
                            />
                            <p
                              className="tagline"
                            />
                          </td>
                          <td>
                            
                          </td>
                        </tr>,
                        <tr>
                          <td>
                            <div>
                              <span
                                className="white"
                              />
                              <span
                                className="white"
                              >
                                195min
                              </span>
                            </div>
                          </td>
                        </tr>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <td>
                              <p
                                className="movieName"
                              />
                              <p
                                className="tagline"
                              />
                            </td>,
                            <td>
                              
                            </td>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": Array [
                                <p
                                  className="movieName"
                                />,
                                <p
                                  className="tagline"
                                />,
                              ],
                            },
                            "ref": null,
                            "rendered": Array [
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": undefined,
                                  "className": "movieName",
                                },
                                "ref": null,
                                "rendered": null,
                                "type": "p",
                              },
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": undefined,
                                  "className": "tagline",
                                },
                                "ref": null,
                                "rendered": null,
                                "type": "p",
                              },
                            ],
                            "type": "td",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "",
                            },
                            "ref": null,
                            "rendered": "",
                            "type": "td",
                          },
                        ],
                        "type": "tr",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <td>
                            <div>
                              <span
                                className="white"
                              />
                              <span
                                className="white"
                              >
                                195min
                              </span>
                            </div>
                          </td>,
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <div>
                              <span
                                className="white"
                              />
                              <span
                                className="white"
                              >
                                195min
                              </span>
                            </div>,
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": Array [
                                <span
                                  className="white"
                                />,
                                <span
                                  className="white"
                                >
                                  195min
                                </span>,
                              ],
                            },
                            "ref": null,
                            "rendered": Array [
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": undefined,
                                  "className": "white",
                                },
                                "ref": null,
                                "rendered": null,
                                "type": "span",
                              },
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": "195min",
                                  "className": "white",
                                },
                                "ref": null,
                                "rendered": "195min",
                                "type": "span",
                              },
                            ],
                            "type": "div",
                          },
                          "type": "td",
                        },
                        "type": "tr",
                      },
                    ],
                    "type": "tbody",
                  },
                  "type": "table",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "overview",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "clear",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ui MovieData component renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MovieData
    history={Object {}}
    movieData={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="movieDataHeader"
        >
          <label
            className="netflixTextMovie"
          >
            netflixroulette
          </label>
          <button
            className="searchButton"
            onClick={[Function]}
          >
            SEARCH
          </button>
        </div>,
        <div
          className="movieBody"
        >
          <div
            className="movieImage"
          >
            <img
              style={
                Object {
                  "borderRadius": "8px",
                  "width": "300px",
                }
              }
            />
          </div>
          <div
            className="movieDesc"
          >
            <table>
              <tbody>
                <tr>
                  <td>
                    <p
                      className="movieName"
                    />
                    <p
                      className="tagline"
                    />
                  </td>
                  <td>
                    <button
                      className="ratingButton"
                      style={
                        Object {
                          "color": "white",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </td>
                </tr>
                <tr>
                  <td>
                    <div>
                      <span
                        className="white"
                      />
                      <span
                        className="white"
                      >
                        
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
            <span
              className="overview"
            />
          </div>
          <div
            className="clear"
          />
        </div>,
      ],
      "className": "movieContainer",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label
              className="netflixTextMovie"
            >
              netflixroulette
            </label>,
            <button
              className="searchButton"
              onClick={[Function]}
            >
              SEARCH
            </button>,
          ],
          "className": "movieDataHeader",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "netflixroulette",
              "className": "netflixTextMovie",
            },
            "ref": null,
            "rendered": "netflixroulette",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "SEARCH",
              "className": "searchButton",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "SEARCH",
            "type": "button",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="movieImage"
            >
              <img
                style={
                  Object {
                    "borderRadius": "8px",
                    "width": "300px",
                  }
                }
              />
            </div>,
            <div
              className="movieDesc"
            >
              <table>
                <tbody>
                  <tr>
                    <td>
                      <p
                        className="movieName"
                      />
                      <p
                        className="tagline"
                      />
                    </td>
                    <td>
                      <button
                        className="ratingButton"
                        style={
                          Object {
                            "color": "white",
                            "fontSize": "20px",
                          }
                        }
                      />
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div>
                        <span
                          className="white"
                        />
                        <span
                          className="white"
                        >
                          
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
              <span
                className="overview"
              />
            </div>,
            <div
              className="clear"
            />,
          ],
          "className": "movieBody",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img
                style={
                  Object {
                    "borderRadius": "8px",
                    "width": "300px",
                  }
                }
              />,
              "className": "movieImage",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "src": undefined,
                "style": Object {
                  "borderRadius": "8px",
                  "width": "300px",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <table>
                  <tbody>
                    <tr>
                      <td>
                        <p
                          className="movieName"
                        />
                        <p
                          className="tagline"
                        />
                      </td>
                      <td>
                        <button
                          className="ratingButton"
                          style={
                            Object {
                              "color": "white",
                              "fontSize": "20px",
                            }
                          }
                        />
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div>
                          <span
                            className="white"
                          />
                          <span
                            className="white"
                          >
                            
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>,
                <span
                  className="overview"
                />,
              ],
              "className": "movieDesc",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <tbody>
                    <tr>
                      <td>
                        <p
                          className="movieName"
                        />
                        <p
                          className="tagline"
                        />
                      </td>
                      <td>
                        <button
                          className="ratingButton"
                          style={
                            Object {
                              "color": "white",
                              "fontSize": "20px",
                            }
                          }
                        />
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div>
                          <span
                            className="white"
                          />
                          <span
                            className="white"
                          >
                            
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <tr>
                        <td>
                          <p
                            className="movieName"
                          />
                          <p
                            className="tagline"
                          />
                        </td>
                        <td>
                          <button
                            className="ratingButton"
                            style={
                              Object {
                                "color": "white",
                                "fontSize": "20px",
                              }
                            }
                          />
                        </td>
                      </tr>,
                      <tr>
                        <td>
                          <div>
                            <span
                              className="white"
                            />
                            <span
                              className="white"
                            >
                              
                            </span>
                          </div>
                        </td>
                      </tr>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <td>
                            <p
                              className="movieName"
                            />
                            <p
                              className="tagline"
                            />
                          </td>,
                          <td>
                            <button
                              className="ratingButton"
                              style={
                                Object {
                                  "color": "white",
                                  "fontSize": "20px",
                                }
                              }
                            />
                          </td>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <p
                                className="movieName"
                              />,
                              <p
                                className="tagline"
                              />,
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": undefined,
                                "className": "movieName",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "p",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": undefined,
                                "className": "tagline",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "p",
                            },
                          ],
                          "type": "td",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <button
                              className="ratingButton"
                              style={
                                Object {
                                  "color": "white",
                                  "fontSize": "20px",
                                }
                              }
                            />,
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": undefined,
                              "className": "ratingButton",
                              "style": Object {
                                "color": "white",
                                "fontSize": "20px",
                              },
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "button",
                          },
                          "type": "td",
                        },
                      ],
                      "type": "tr",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <td>
                          <div>
                            <span
                              className="white"
                            />
                            <span
                              className="white"
                            >
                              
                            </span>
                          </div>
                        </td>,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <div>
                            <span
                              className="white"
                            />
                            <span
                              className="white"
                            >
                              
                            </span>
                          </div>,
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <span
                                className="white"
                              />,
                              <span
                                className="white"
                              >
                                
                              </span>,
                            ],
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": undefined,
                                "className": "white",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "span",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "",
                                "className": "white",
                              },
                              "ref": null,
                              "rendered": "",
                              "type": "span",
                            },
                          ],
                          "type": "div",
                        },
                        "type": "td",
                      },
                      "type": "tr",
                    },
                  ],
                  "type": "tbody",
                },
                "type": "table",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "overview",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "clear",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="movieDataHeader"
          >
            <label
              className="netflixTextMovie"
            >
              netflixroulette
            </label>
            <button
              className="searchButton"
              onClick={[Function]}
            >
              SEARCH
            </button>
          </div>,
          <div
            className="movieBody"
          >
            <div
              className="movieImage"
            >
              <img
                style={
                  Object {
                    "borderRadius": "8px",
                    "width": "300px",
                  }
                }
              />
            </div>
            <div
              className="movieDesc"
            >
              <table>
                <tbody>
                  <tr>
                    <td>
                      <p
                        className="movieName"
                      />
                      <p
                        className="tagline"
                      />
                    </td>
                    <td>
                      <button
                        className="ratingButton"
                        style={
                          Object {
                            "color": "white",
                            "fontSize": "20px",
                          }
                        }
                      />
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div>
                        <span
                          className="white"
                        />
                        <span
                          className="white"
                        >
                          
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
              <span
                className="overview"
              />
            </div>
            <div
              className="clear"
            />
          </div>,
        ],
        "className": "movieContainer",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <label
                className="netflixTextMovie"
              >
                netflixroulette
              </label>,
              <button
                className="searchButton"
                onClick={[Function]}
              >
                SEARCH
              </button>,
            ],
            "className": "movieDataHeader",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "netflixroulette",
                "className": "netflixTextMovie",
              },
              "ref": null,
              "rendered": "netflixroulette",
              "type": "label",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "SEARCH",
                "className": "searchButton",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "SEARCH",
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="movieImage"
              >
                <img
                  style={
                    Object {
                      "borderRadius": "8px",
                      "width": "300px",
                    }
                  }
                />
              </div>,
              <div
                className="movieDesc"
              >
                <table>
                  <tbody>
                    <tr>
                      <td>
                        <p
                          className="movieName"
                        />
                        <p
                          className="tagline"
                        />
                      </td>
                      <td>
                        <button
                          className="ratingButton"
                          style={
                            Object {
                              "color": "white",
                              "fontSize": "20px",
                            }
                          }
                        />
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div>
                          <span
                            className="white"
                          />
                          <span
                            className="white"
                          >
                            
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
                <span
                  className="overview"
                />
              </div>,
              <div
                className="clear"
              />,
            ],
            "className": "movieBody",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <img
                  style={
                    Object {
                      "borderRadius": "8px",
                      "width": "300px",
                    }
                  }
                />,
                "className": "movieImage",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "src": undefined,
                  "style": Object {
                    "borderRadius": "8px",
                    "width": "300px",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <table>
                    <tbody>
                      <tr>
                        <td>
                          <p
                            className="movieName"
                          />
                          <p
                            className="tagline"
                          />
                        </td>
                        <td>
                          <button
                            className="ratingButton"
                            style={
                              Object {
                                "color": "white",
                                "fontSize": "20px",
                              }
                            }
                          />
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div>
                            <span
                              className="white"
                            />
                            <span
                              className="white"
                            >
                              
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>,
                  <span
                    className="overview"
                  />,
                ],
                "className": "movieDesc",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <tbody>
                      <tr>
                        <td>
                          <p
                            className="movieName"
                          />
                          <p
                            className="tagline"
                          />
                        </td>
                        <td>
                          <button
                            className="ratingButton"
                            style={
                              Object {
                                "color": "white",
                                "fontSize": "20px",
                              }
                            }
                          />
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div>
                            <span
                              className="white"
                            />
                            <span
                              className="white"
                            >
                              
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <tr>
                          <td>
                            <p
                              className="movieName"
                            />
                            <p
                              className="tagline"
                            />
                          </td>
                          <td>
                            <button
                              className="ratingButton"
                              style={
                                Object {
                                  "color": "white",
                                  "fontSize": "20px",
                                }
                              }
                            />
                          </td>
                        </tr>,
                        <tr>
                          <td>
                            <div>
                              <span
                                className="white"
                              />
                              <span
                                className="white"
                              >
                                
                              </span>
                            </div>
                          </td>
                        </tr>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <td>
                              <p
                                className="movieName"
                              />
                              <p
                                className="tagline"
                              />
                            </td>,
                            <td>
                              <button
                                className="ratingButton"
                                style={
                                  Object {
                                    "color": "white",
                                    "fontSize": "20px",
                                  }
                                }
                              />
                            </td>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": Array [
                                <p
                                  className="movieName"
                                />,
                                <p
                                  className="tagline"
                                />,
                              ],
                            },
                            "ref": null,
                            "rendered": Array [
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": undefined,
                                  "className": "movieName",
                                },
                                "ref": null,
                                "rendered": null,
                                "type": "p",
                              },
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": undefined,
                                  "className": "tagline",
                                },
                                "ref": null,
                                "rendered": null,
                                "type": "p",
                              },
                            ],
                            "type": "td",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": <button
                                className="ratingButton"
                                style={
                                  Object {
                                    "color": "white",
                                    "fontSize": "20px",
                                  }
                                }
                              />,
                            },
                            "ref": null,
                            "rendered": Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": undefined,
                                "className": "ratingButton",
                                "style": Object {
                                  "color": "white",
                                  "fontSize": "20px",
                                },
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "button",
                            },
                            "type": "td",
                          },
                        ],
                        "type": "tr",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <td>
                            <div>
                              <span
                                className="white"
                              />
                              <span
                                className="white"
                              >
                                
                              </span>
                            </div>
                          </td>,
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <div>
                              <span
                                className="white"
                              />
                              <span
                                className="white"
                              >
                                
                              </span>
                            </div>,
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": Array [
                                <span
                                  className="white"
                                />,
                                <span
                                  className="white"
                                >
                                  
                                </span>,
                              ],
                            },
                            "ref": null,
                            "rendered": Array [
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": undefined,
                                  "className": "white",
                                },
                                "ref": null,
                                "rendered": null,
                                "type": "span",
                              },
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": "",
                                  "className": "white",
                                },
                                "ref": null,
                                "rendered": "",
                                "type": "span",
                              },
                            ],
                            "type": "div",
                          },
                          "type": "td",
                        },
                        "type": "tr",
                      },
                    ],
                    "type": "tbody",
                  },
                  "type": "table",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "overview",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "clear",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
